[package]
name = "start-smt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = "0.108"
ethereum-types = { version = "0.14", features = ["arbitrary", "codec", "rlp", "serialize", "std"] }
hex = { version = "0.4.3", default-features = false }
sparse-merkle-tree = { version = "0.6.1", feautres = ["trie"] }

[features]
default = []
trie = ["sparse-merkle-tree/trie"]
